{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 10,
  "lineage": "ca0093e0-7746-c830-0c08-098c7c4f5ca6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3f2cef1fc7d0edb",
            "arn": "arn:aws:ec2:eu-west-3:423231905402:instance/i-014e71cc01522de40",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014e71cc01522de40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-technova",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00808782c37becbf7"
              }
            ],
            "primary_network_interface_id": "eni-00808782c37becbf7",
            "private_dns": "ip-10-0-1-73.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-35-180-57-98.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.57.98",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:423231905402:key/b2f34311-c630-4272-9eb0-baf57a311a35",
                "throughput": 125,
                "volume_id": "vol-00a2e02a23544a54c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0940927ca72611266"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d034cb5c957cf744",
            "tags": {
              "Name": "web-technova-1"
            },
            "tags_all": {
              "Name": "web-technova-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0940927ca72611266"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "i-014e71cc01522de40",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3f2cef1fc7d0edb",
            "arn": "arn:aws:ec2:eu-west-3:423231905402:instance/i-06f236574d6838e61",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f236574d6838e61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-technova",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0be10bee0f761f8e6"
              }
            ],
            "primary_network_interface_id": "eni-0be10bee0f761f8e6",
            "private_dns": "ip-10-0-1-74.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-15-237-197-210.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.197.210",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:423231905402:key/b2f34311-c630-4272-9eb0-baf57a311a35",
                "throughput": 125,
                "volume_id": "vol-0e026f99e258067d2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0940927ca72611266"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d034cb5c957cf744",
            "tags": {
              "Name": "web-technova-2"
            },
            "tags_all": {
              "Name": "web-technova-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0940927ca72611266"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "i-06f236574d6838e61",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:423231905402:internet-gateway/igw-0fd264cf0ba40ecf0",
            "id": "igw-0fd264cf0ba40ecf0",
            "owner_id": "423231905402",
            "region": "eu-west-3",
            "tags": {
              "Name": "igw-technova"
            },
            "tags_all": {
              "Name": "igw-technova"
            },
            "vpc_id": "vpc-0ede38952e56b7e9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:423231905402:route-table/rtb-0f89a80d8ae629ed1",
            "id": "rtb-0f89a80d8ae629ed1",
            "owner_id": "423231905402",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd264cf0ba40ecf0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-technova"
            },
            "tags_all": {
              "Name": "rt-public-technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ede38952e56b7e9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "rtb-0f89a80d8ae629ed1",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab73356128504d54",
            "region": "eu-west-3",
            "route_table_id": "rtb-0f89a80d8ae629ed1",
            "subnet_id": "subnet-0d034cb5c957cf744"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:423231905402:security-group/sg-0940927ca72611266",
            "description": "Security group pour serveurs web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0940927ca72611266",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-web-technova",
            "name_prefix": "",
            "owner_id": "423231905402",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-web-technova"
            },
            "tags_all": {
              "Name": "sg-web-technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ede38952e56b7e9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "sg-0940927ca72611266",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:423231905402:subnet/subnet-0d034cb5c957cf744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d034cb5c957cf744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423231905402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "subnet-public-technova"
            },
            "tags_all": {
              "Name": "subnet-public-technova"
            },
            "vpc_id": "vpc-0ede38952e56b7e9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "subnet-0d034cb5c957cf744",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:423231905402:vpc/vpc-0ede38952e56b7e9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0933122806f6390ce",
            "default_route_table_id": "rtb-08b20989eaa9af9ad",
            "default_security_group_id": "sg-0caec9af0362d4b1c",
            "dhcp_options_id": "dopt-096b6634089f40056",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ede38952e56b7e9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b20989eaa9af9ad",
            "owner_id": "423231905402",
            "region": "eu-west-3",
            "tags": {
              "Name": "vpc-technova"
            },
            "tags_all": {
              "Name": "vpc-technova"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423231905402",
            "id": "vpc-0ede38952e56b7e9f",
            "region": "eu-west-3"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}